Preciso de uma pausa

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "authors": [
         {
             "name": "Isa",
-            "email": "kmasi4@gmail.com"
+            "email": "naotenhoemail@gmail.com"
         }
     ],
     "require": {
